// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ManageRequests component should display loader 1`] = `
<ManageRequests
  fetchRequests={[Function]}
  requests={
    Immutable.Map {
    }
  }
>
  <Loader
    inline={false}
    minHeight="500px"
  >
    <div
      className="container"
    >
      <div
        className="inner"
        style={
          Object {
            "minHeight": "500px",
          }
        }
      >
        <i
          className="fa fa-fw fa-circle-o-notch fa-spin"
        />
      </div>
    </div>
  </Loader>
</ManageRequests>
`;

exports[`ManageRequests component should display requests 1`] = `
<ManageRequests
  fetchRequests={[Function]}
  requests={
    Immutable.List [
      Immutable.Map {
        id: 123,
        name: "missing items",
      },
      Immutable.Map {
        id: 125,
        name: "order status",
      },
    ]
  }
>
  <div
    className="full-width"
  >
    <PageHeader
      title="Manage Requests (experimental)"
    >
      <div
        className="d-flex align-items-center justify-content-between flex-wrap page-header "
      >
        <h1
          className="d-flex align-items-center"
        >
          Manage Requests (experimental)
        </h1>
        <div>
          <Button
            className="mr-2"
            color="secondary"
            disabled={true}
            id="bulk-remove-button"
            onClick={[Function]}
            tag="button"
            type="button"
          >
            <button
              className="mr-2 btn btn-secondary disabled"
              disabled={true}
              id="bulk-remove-button"
              onClick={[Function]}
              type="button"
            >
              Delete Requests
            </button>
          </Button>
          <Popover
            delay={
              Object {
                "hide": 0,
                "show": 0,
              }
            }
            hideArrow={false}
            isOpen={false}
            placement="bottom"
            placementPrefix="bs-popover"
            target="bulk-remove-button"
            toggle={[Function]}
          />
          <Link
            className="btn btn-primary"
            id="create-request-button"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/requests/add"
          >
            <a
              className="btn btn-primary"
              id="create-request-button"
              onClick={[Function]}
              style={Object {}}
            >
              Create request
            </a>
          </Link>
        </div>
      </div>
    </PageHeader>
    <Container
      className="page-container"
      fluid={true}
      tag="div"
    >
      <div
        className="page-container container-fluid"
      >
        <div
          className="manage-requests-description"
        >
          <p>
            Requests are distinct categories of customer messages that can be used to automatically classify individual customer requests, questions, demands/etc... Requests are most useful in combination with 
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/app/settings/rules/"
            >
              <a
                onClick={[Function]}
                style={Object {}}
              >
                Rules
              </a>
            </Link>
             and can be used to create automatic replies.
          </p>
          <Alert
            closeAriaLabel="Close"
            color="warning"
            isOpen={true}
            tag="div"
            transition={
              Object {
                "appear": true,
                "baseClass": "fade",
                "baseClassActive": "show",
                "enter": true,
                "exit": true,
                "in": true,
                "mountOnEnter": false,
                "onEnter": [Function],
                "onEntered": [Function],
                "onEntering": [Function],
                "onExit": [Function],
                "onExited": [Function],
                "onExiting": [Function],
                "tag": "div",
                "timeout": 150,
                "unmountOnExit": true,
              }
            }
          >
            <Fade
              appear={true}
              baseClass="fade"
              baseClassActive="show"
              className="alert alert-warning"
              enter={true}
              exit={true}
              in={true}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              role="alert"
              tag="div"
              timeout={150}
              unmountOnExit={true}
            >
              <Transition
                appear={true}
                enter={true}
                exit={true}
                in={true}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={150}
                unmountOnExit={true}
              >
                <div
                  className="alert alert-warning fade"
                  role="alert"
                >
                  <strong>
                    Note:
                  </strong>
                   This feature is experimental and should be used with care.
                </div>
              </Transition>
            </Fade>
          </Alert>
        </div>
        <table
          className="view-table"
        >
          <thead>
            <tr>
              <td
                className="cell-wrapper cell-short clickable"
                onClick={[Function]}
              >
                <input
                  checked={false}
                  type="checkbox"
                />
              </td>
              <td
                colSpan={2}
              >
                <div
                  className="cell-wrapper"
                >
                  Requests
                </div>
              </td>
            </tr>
          </thead>
          <tbody>
            <tr>
              <td
                className="cell-wrapper cell-short clickable"
                onClick={[Function]}
              >
                <input
                  checked={false}
                  type="checkbox"
                />
              </td>
              <td>
                <div
                  className="cell-wrapper"
                >
                  missing items
                </div>
              </td>
              <td
                className="smallest"
              >
                <div
                  className="cell-wrapper"
                >
                  <Link
                    className="p-0 mr-3 btn-link"
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/requests/update/123"
                  >
                    <a
                      className="p-0 mr-3 btn-link"
                      onClick={[Function]}
                      style={Object {}}
                    >
                      <i
                        className="fa fa-fw fa-pencil mr-1"
                      />
                      Edit
                    </a>
                  </Link>
                  <Button
                    className="p-0"
                    color="link"
                    id="remove-button-123"
                    onClick={[Function]}
                    tag="button"
                    type="button"
                  >
                    <button
                      className="p-0 btn btn-link"
                      id="remove-button-123"
                      onClick={[Function]}
                      type="button"
                    >
                      <i
                        className="fa fa-fw fa-close mr-1"
                      />
                      Delete
                    </button>
                  </Button>
                  <Popover
                    delay={
                      Object {
                        "hide": 0,
                        "show": 0,
                      }
                    }
                    hideArrow={false}
                    isOpen={false}
                    placement="left"
                    placementPrefix="bs-popover"
                    target="remove-button-123"
                    toggle={[Function]}
                  />
                </div>
              </td>
            </tr>
            <tr>
              <td
                className="cell-wrapper cell-short clickable"
                onClick={[Function]}
              >
                <input
                  checked={false}
                  type="checkbox"
                />
              </td>
              <td>
                <div
                  className="cell-wrapper"
                >
                  order status
                </div>
              </td>
              <td
                className="smallest"
              >
                <div
                  className="cell-wrapper"
                >
                  <Link
                    className="p-0 mr-3 btn-link"
                    onlyActiveOnIndex={false}
                    style={Object {}}
                    to="/app/settings/requests/update/125"
                  >
                    <a
                      className="p-0 mr-3 btn-link"
                      onClick={[Function]}
                      style={Object {}}
                    >
                      <i
                        className="fa fa-fw fa-pencil mr-1"
                      />
                      Edit
                    </a>
                  </Link>
                  <Button
                    className="p-0"
                    color="link"
                    id="remove-button-125"
                    onClick={[Function]}
                    tag="button"
                    type="button"
                  >
                    <button
                      className="p-0 btn btn-link"
                      id="remove-button-125"
                      onClick={[Function]}
                      type="button"
                    >
                      <i
                        className="fa fa-fw fa-close mr-1"
                      />
                      Delete
                    </button>
                  </Button>
                  <Popover
                    delay={
                      Object {
                        "hide": 0,
                        "show": 0,
                      }
                    }
                    hideArrow={false}
                    isOpen={false}
                    placement="left"
                    placementPrefix="bs-popover"
                    target="remove-button-125"
                    toggle={[Function]}
                  />
                </div>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </Container>
  </div>
</ManageRequests>
`;

exports[`ManageRequests component should load with empty props 1`] = `
<ManageRequests
  fetchRequests={[Function]}
  requests={
    Immutable.Map {
    }
  }
>
  <div
    className="full-width"
  >
    <PageHeader
      title="Manage Requests (experimental)"
    >
      <div
        className="d-flex align-items-center justify-content-between flex-wrap page-header "
      >
        <h1
          className="d-flex align-items-center"
        >
          Manage Requests (experimental)
        </h1>
        <div>
          <Button
            className="mr-2"
            color="secondary"
            disabled={true}
            id="bulk-remove-button"
            onClick={[Function]}
            tag="button"
            type="button"
          >
            <button
              className="mr-2 btn btn-secondary disabled"
              disabled={true}
              id="bulk-remove-button"
              onClick={[Function]}
              type="button"
            >
              Delete Requests
            </button>
          </Button>
          <Popover
            delay={
              Object {
                "hide": 0,
                "show": 0,
              }
            }
            hideArrow={false}
            isOpen={false}
            placement="bottom"
            placementPrefix="bs-popover"
            target="bulk-remove-button"
            toggle={[Function]}
          />
          <Link
            className="btn btn-primary"
            id="create-request-button"
            onlyActiveOnIndex={false}
            style={Object {}}
            to="/app/settings/requests/add"
          >
            <a
              className="btn btn-primary"
              id="create-request-button"
              onClick={[Function]}
              style={Object {}}
            >
              Create request
            </a>
          </Link>
        </div>
      </div>
    </PageHeader>
    <Container
      className="page-container"
      fluid={true}
      tag="div"
    >
      <div
        className="page-container container-fluid"
      >
        <div
          className="manage-requests-description"
        >
          <p>
            Requests are distinct categories of customer messages that can be used to automatically classify individual customer requests, questions, demands/etc... Requests are most useful in combination with 
            <Link
              onlyActiveOnIndex={false}
              style={Object {}}
              to="/app/settings/rules/"
            >
              <a
                onClick={[Function]}
                style={Object {}}
              >
                Rules
              </a>
            </Link>
             and can be used to create automatic replies.
          </p>
          <Alert
            closeAriaLabel="Close"
            color="warning"
            isOpen={true}
            tag="div"
            transition={
              Object {
                "appear": true,
                "baseClass": "fade",
                "baseClassActive": "show",
                "enter": true,
                "exit": true,
                "in": true,
                "mountOnEnter": false,
                "onEnter": [Function],
                "onEntered": [Function],
                "onEntering": [Function],
                "onExit": [Function],
                "onExited": [Function],
                "onExiting": [Function],
                "tag": "div",
                "timeout": 150,
                "unmountOnExit": true,
              }
            }
          >
            <Fade
              appear={true}
              baseClass="fade"
              baseClassActive="show"
              className="alert alert-warning"
              enter={true}
              exit={true}
              in={true}
              mountOnEnter={false}
              onEnter={[Function]}
              onEntered={[Function]}
              onEntering={[Function]}
              onExit={[Function]}
              onExited={[Function]}
              onExiting={[Function]}
              role="alert"
              tag="div"
              timeout={150}
              unmountOnExit={true}
            >
              <Transition
                appear={true}
                enter={true}
                exit={true}
                in={true}
                mountOnEnter={false}
                onEnter={[Function]}
                onEntered={[Function]}
                onEntering={[Function]}
                onExit={[Function]}
                onExited={[Function]}
                onExiting={[Function]}
                timeout={150}
                unmountOnExit={true}
              >
                <div
                  className="alert alert-warning fade"
                  role="alert"
                >
                  <strong>
                    Note:
                  </strong>
                   This feature is experimental and should be used with care.
                </div>
              </Transition>
            </Fade>
          </Alert>
        </div>
        <table
          className="view-table"
        >
          <thead>
            <tr>
              <td
                className="cell-wrapper cell-short clickable"
                onClick={[Function]}
              >
                <input
                  checked={false}
                  type="checkbox"
                />
              </td>
              <td
                colSpan={2}
              >
                <div
                  className="cell-wrapper"
                >
                  Requests
                </div>
              </td>
            </tr>
          </thead>
          <tbody />
        </table>
      </div>
    </Container>
  </div>
</ManageRequests>
`;
